--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Simulador intractivo</title>
 </head>
 <body>
-    <script src="./JavaScript/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
